--- a/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Volunteer/EventDetails.cshtml
@@ -243,7 +243,7 @@
                                         <div class="modal-body">
                                             <form id="joinForm">
                                                 <div class="form-group">
-                                                    <label for="skillSelect">Select Required Skill</label>
+                                                    <label for="skillSelect">Select Match Skill</label>
                                                     <div id="skillSelect">
                                                         @foreach (var mskill in Model.matchSkill)
                                                         {
