--- a/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Shared/_Organization.cshtml
@@ -181,6 +181,7 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/Content/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
     <script src="~/Content/js1/bootstrap.bundle.min.js"></script>
 
