--- a/Tabang-Hub/Tabang-Hub/Views/Page/Verify.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Page/Verify.cshtml
@@ -134,25 +134,26 @@
                 url: '@Url.Action("Verify", "Page")',
                 type: 'POST',
                 data: { otp1: otp[0], otp2: otp[1], otp3: otp[2], otp4: otp[3] },
-                success: function (response) {
-                    if (response.success) {
-                        Swal.fire({
-                            title: 'Success',
-                            text: response.message,
-                            icon: 'success',
-                            confirmButtonText: 'OK'
-                        }).then(() => {
-                            window.location.href = '@Url.Action("Index", "Page")';
-                        });
-                    } else {
-                        Swal.fire({
-                            title: 'Error',
-                            text: response.message,
-                            icon: 'error',
-                            confirmButtonText: 'OK'
-                        });
-                    }
-                },
+               success: function (response) {
+    if (response.success) {
+        Swal.fire({
+            title: 'Success',
+            text: response.message,
+            icon: 'success',
+            confirmButtonText: 'OK'
+        }).then(() => {
+            // Use the redirectUrl from the server's response
+            window.location.href = response.redirectUrl;
+        });
+    } else {
+        Swal.fire({
+            title: 'Error',
+            text: response.message,
+            icon: 'error',
+            confirmButtonText: 'OK'
+        });
+    }
+},
                 error: function () {
                     Swal.fire({
                         title: 'Error',
